src/objects/CR_Schedule_Block__c.object
<CustomObject>
    <fields>
        <fullName>Allow_All__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Allow All</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Calendar_Label__c</fullName>
        <defaultValue>&apos;Open Block&apos;</defaultValue>
        <label>Calendar Label</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clinical_Room__c</fullName>
        <label>Clinical Room</label>
        <referenceTo>Clinical_Room__c</referenceTo>
        <relationshipLabel>CR Schedule Blocks</relationshipLabel>
        <relationshipName>CR_Schedule_Blocks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DOW_Picklist__c</fullName>
        <label>DOW Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Sunday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DOW__c</fullName>
        <description>Field to hold the day of the week value from a datetime format. 1 = Monday / 7 = Sunday</description>
        <label>DOW</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Hour_Int__c</fullName>
        <formula>value( End_Hour__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Hour Int</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Hour__c</fullName>
        <label>End Hour</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Minute_Int__c</fullName>
        <formula>value( End_Minute__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Minute Int</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Minute__c</fullName>
        <label>End Minute</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:10 AM</fullName>
                </value>
                <value>
                    <fullName>7:20 AM</fullName>
                </value>
                <value>
                    <fullName>7:30 AM</fullName>
                </value>
                <value>
                    <fullName>7:40 AM</fullName>
                </value>
                <value>
                    <fullName>7:50 AM</fullName>
                </value>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>8:10 AM</fullName>
                </value>
                <value>
                    <fullName>8:20 AM</fullName>
                </value>
                <value>
                    <fullName>8:30 AM</fullName>
                </value>
                <value>
                    <fullName>8:40 AM</fullName>
                </value>
                <value>
                    <fullName>8:50 AM</fullName>
                </value>
                <value>
                    <fullName>9:00 AM</fullName>
                </value>
                <value>
                    <fullName>9:10 AM</fullName>
                </value>
                <value>
                    <fullName>9:20 AM</fullName>
                </value>
                <value>
                    <fullName>9:30 AM</fullName>
                </value>
                <value>
                    <fullName>9:40 AM</fullName>
                </value>
                <value>
                    <fullName>9:50 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:10 AM</fullName>
                </value>
                <value>
                    <fullName>10:20 AM</fullName>
                </value>
                <value>
                    <fullName>10:30 AM</fullName>
                </value>
                <value>
                    <fullName>10:40 AM</fullName>
                </value>
                <value>
                    <fullName>10:50 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:10 AM</fullName>
                </value>
                <value>
                    <fullName>11:20 AM</fullName>
                </value>
                <value>
                    <fullName>11:30 AM</fullName>
                </value>
                <value>
                    <fullName>11:40 AM</fullName>
                </value>
                <value>
                    <fullName>11:50 AM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Num_Authorized_Apts__c</fullName>
        <label>Num Authorized Apts</label>
        <summaryForeignKey>CR_Sched_Block_Authorized_Apt__c.CR_Schedule_Block__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Start_Hour_Int__c</fullName>
        <formula>value( Start_Hour__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Hour Int</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Hour__c</fullName>
        <label>Start Hour</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Minute_Int__c</fullName>
        <formula>value( Start_Minute__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Minute Int</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Minute__c</fullName>
        <label>Start Minute</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:10 AM</fullName>
                </value>
                <value>
                    <fullName>7:20 AM</fullName>
                </value>
                <value>
                    <fullName>7:30 AM</fullName>
                </value>
                <value>
                    <fullName>7:40 AM</fullName>
                </value>
                <value>
                    <fullName>7:50 AM</fullName>
                </value>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>8:10 AM</fullName>
                </value>
                <value>
                    <fullName>8:20 AM</fullName>
                </value>
                <value>
                    <fullName>8:30 AM</fullName>
                </value>
                <value>
                    <fullName>8:40 AM</fullName>
                </value>
                <value>
                    <fullName>8:50 AM</fullName>
                </value>
                <value>
                    <fullName>9:00 AM</fullName>
                </value>
                <value>
                    <fullName>9:10 AM</fullName>
                </value>
                <value>
                    <fullName>9:20 AM</fullName>
                </value>
                <value>
                    <fullName>9:30 AM</fullName>
                </value>
                <value>
                    <fullName>9:40 AM</fullName>
                </value>
                <value>
                    <fullName>9:50 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:10 AM</fullName>
                </value>
                <value>
                    <fullName>10:20 AM</fullName>
                </value>
                <value>
                    <fullName>10:30 AM</fullName>
                </value>
                <value>
                    <fullName>10:40 AM</fullName>
                </value>
                <value>
                    <fullName>10:50 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:10 AM</fullName>
                </value>
                <value>
                    <fullName>11:20 AM</fullName>
                </value>
                <value>
                    <fullName>11:30 AM</fullName>
                </value>
                <value>
                    <fullName>11:40 AM</fullName>
                </value>
                <value>
                    <fullName>11:50 AM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <label>CR Schedule Block</label>
    <nameField>
        <displayFormat>CRSB-{0000}</displayFormat>
        <label>Cr Schedule Block Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CR Schedule Blocks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>